--- a/study-and-practice-main-page.html
+++ b/study-and-practice-main-page.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8"/>
 	<title>Sondra's Coding Study & Practice Page</title>
 	<link rel="stylesheet"
-	href="study-and-practice-main-page-css"/>
-	<script src="study-and-practice-main-page-js">
+	href="study-and-practice-main-page-css.css"/>
 	</head>
 	
 <!--BODY CONTENT-->
