Created a proper JS reference
The previous JS reference had an error in it that blocked the HTML from rendering. This updated reference does not.

--- a/study-and-practice-main-page.html
+++ b/study-and-practice-main-page.html
@@ -5,6 +5,7 @@
 	<title>Sondra's Coding Study & Practice Page</title>
 	<link rel="stylesheet"
 	href="study-and-practice-main-page-css.css"/>
+	<script type="text/javascript" src="study-and-practice-main-page-js.js"></script>
 	</head>
 	
 <!--BODY CONTENT-->
