--- a/study-and-practice-page-2.html
+++ b/study-and-practice-page-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--SITE NAME: Coding Study and Practice > PAGE NAME: Linked Page-->
+<!--SITE NAME: Coding Study and Practice > PAGE NAME: Page 2-->
 
 <!--META DATA--> 
 <html lang="en-us"/>
