Updated file names

--- a/main-page.html
+++ b/main-page.html
@@ -5,19 +5,19 @@
 	<title>Sondra's Coding Study & Practice Page</title>
 <!--Contains embedded CSS and JS files.-->	
 	<link rel="stylesheet"
-	href="study-and-practice-main-page-css.css"/>
-	<script type="text/javascript" src="study-and-practice-main-page-js.js"></script>
+	href="style-sheet.css"/>
+	<script type="text/javascript" src="javascript-practice.js"></script>
 	</head>
 <!--BODY CONTENT-->
 <!--Style Classes and IDs used: body, header (ID), nav, h1, div, h2-->
 <body class="body">
 	<header id="header" roll="banner">
-	<img src="dont-let-em-get-to-you" alt="Don't Let Them Get to You."/> 
+	<img src="push-back.jpg" alt="Don't Let Them Get to You."/> 
 	<nav class="navigation">
 		<ul>
-			<li><a href="study-and-practice-page-2.html">Page 2</a></li>
-			<li><a href="study-and-practice-page-3.html">Page 3</a></li>
-			<li><a href="study-and-practice-page-4.html">Page 4</a></li>
+			<li><a href="page-2.html">Page 2</a></li>
+			<li><a href="page-3.html">Page 3</a></li>
+			<li><a href="page-4.html">Page 4</a></li>
 		</ul>
 	</header>
 
