Changes for testing and readability

--- a/main-page.html
+++ b/main-page.html
@@ -1,43 +1,48 @@
 <!DOCTYPE HTML>
 <html lang="en-us"/>
+<!--SITE NAME: study-and-practice; PAGE: MAIN; LOCATION: Github > "study-and-practice" repository-->
 	<head>
 	<meta charset="UTF-8"/>
 	<title>Sondra's Coding Study & Practice Page</title>
-<!--Contains embedded CSS and JS files.-->	
+<!--Contains embedded CSS and JS files-->	
 	<link rel="stylesheet"
 	href="style-sheet.css"/>
 	<script type="text/javascript" src="javascript-practice.js"></script>
 	</head>
+	
 <!--BODY CONTENT-->
-<!--Style Classes and IDs used: body, header (ID), nav, h1, div, h2-->
+<!--Style Classes and IDs used: body, header (ID), nav, h1, header-div, h1-p, aside-p -->
+<!--[Bracketed text] decribes what the element should look like according the CSS-->
 <body class="body">
+	<div class="header-div"
 	<header id="header" roll="banner">
-	<img src="push-back.jpg" alt="Don't Let Them Get to You."/> 
-	<nav class="navigation">
+	<h1 class="header-h1">Sondra's HIDEOUS Study-and-Practice Site! [purple sans-serif]</h1>
+	<img src="kitty-scream.jpg" alt="Meow-za!"/> 
+	<nav class="nav">
 		<ul>
 			<li><a href="page-2.html">Page 2</a></li>
 			<li><a href="page-3.html">Page 3</a></li>
 			<li><a href="page-4.html">Page 4</a></li>
 		</ul>
 	</header>
+	</div>
 
-<!--Content: A MAIN CONTENT SECTION-->
+<!--Content: MAIN CONTENT SECTION-->
 	<section>
-	<h1 class="heading" title="First Heading">This is My First Heading on the Page.</h1>
-	<p class="paragraph">This is My First Paragraph-- This part is all in a section.</p> 
+	<h1 class="section-h1" title="First Heading">FIRST HEADING/SECTION [yellow text]</h1>
+	<p class="section-p">This is My First Paragraph-- This part is all in a SECTION. It should be in [Courier New font], have an [orange background], and be in [green text]. It's probably atrocious ;) </p> 
 	</section>
 	
-<!--Content: AN ASIDE (SIDEBAR)-->
-	<div class="div">
+<!--Content: ASIDE (SIDEBAR)-->
+	<div class="aside-div">
 	<aside> 
-	<h1 class="heading" title="aside">ASIDE CONTENT.</h1>
-	<p class="paragraph" title="aside paragraph">This is the text should be in a sidebar if I style it correctly.</p> 
+	<h1 class="aside-h1" title="aside">ASIDE CONTENT</h1>
+	<p class="aside-p" title="aside paragraph">This is the text should be in a sidebar if I style it correctly. It should be in Courier New font.</p> 
 	</aside>
 	</div>
 
-<!--Content: Footer-->
-	<footer>This is my footer.</footer>
-	
+<!--Content: FOOTER-->
+	<footer><small>This is my footer. It should be in small font and be colored white.</small></footer>
 </body>
 
 <!--END OF HTML DOCUMENT-->
