--- a/main-page.html
+++ b/main-page.html
@@ -42,7 +42,7 @@
 	</div>
 
 <!--Content: FOOTER-->
-	<footer><small>This is my footer. It should be in small font and be colored white.</small></footer>
+	<footer class="footer"><small>This is my footer. It should be in small font and be colored white.</small></footer>
 </body>
 
 <!--END OF HTML DOCUMENT-->
